--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
 
 }
 
-#p{
-    color: black;
-    background-color: white;
+.idiot{
+    margin: 10px;
+    padding: 5px;
+   background-color: black;
+   color: white;
 }
